dev/media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: yas-dev
  labels:
    app: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: ghcr.io/nashtech-garage/yas-media:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
