dev/media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media
  namespace: yas-dev
  labels:
    app: media
spec:
  type: ClusterIP
  selector:
    app: media
  ports:
  - port: 80
    targetPort: 80
